build: upgrade intellij platform version